--- a/Dockerfile.py3perfdebian
+++ b/Dockerfile.py3perfdebian
@@ -1,5 +1,7 @@
 FROM python:3.7.4-buster
 
 RUN python3 -m pip install pyperformance
-RUN mkdir /app
-WORKDIR /app
+RUN apt update
+RUN apt install linux-perf-5.0 -y
+
+
